wp-content/themes/nozama-lite/style.css
/* ... */
@media (min-width: 1350px) {
  .navigation-main > .menu-item-first {
    width: 205px;
  }

  .header-fullwidth .container,
  .header-fullwidth .head-mast-container {
    width: 1600px;
  }

  .head-mast-container {
    padding-right: 15px;
    padding-left: 15px;
  }

  .head-mast-container {
    width: 1320px;
    max-width: 100%;
  }

  .header-branding-wrap {
    flex: 0 0 16.66667%;
    max-width: 16.66667%;
  }

  .head-search-form-wrap {
    flex: 0 0 83.33333%;
    max-width: 83.33333%;
  }

  .footer-fullwidth .container {
    width: 1600px;
  }

  .sidebar {
    margin-left: 30px;
  }

  .flex-row-reverse .sidebar {
    margin-left: 0;
    margin-right: 30px;
  }

  .gallery {
    margin-right: -5px;
    margin-left: -5px;
  }

  .gallery-columns-1 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-2 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-3 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-4 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-5 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-6 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-7 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-8 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .gallery-columns-9 .gallery-item {
    padding-right: 5px;
    padding-left: 5px;
  }

  .type-product .thumbnails {
    margin-right: -15px;
    margin-left: -15px;
  }

  .type-product .thumbnails a {
    padding-right: 15px;
    padding-left: 15px;
  }

  .woocommerce-account .woocommerce:not(.widget) {
    margin-right: -15px;
    margin-left: -15px;
  }

  .woocommerce-account .woocommerce:not(.widget) > h2,
  .woocommerce-account .woocommerce:not(.widget) > form.login {
    padding-right: 15px;
    padding-left: 15px;
  }

  .woocommerce-MyAccount-navigation {
    padding-right: 15px;
    padding-left: 15px;
  }

  .woocommerce-MyAccount-content {
    padding-right: 15px;
    padding-left: 15px;
  }

  .woocommerce-Addresses {
    margin-right: -15px;
    margin-left: -15px;
  }

  .woocommerce-Address {
    padding-right: 15px;
    padding-left: 15px;
  }

  .wc-block-grid .wc-block-grid__products {
    margin-right: -15px;
    margin-left: -15px;
  }

  .has-4-columns .wc-block-grid__products .wc-block-grid__product {
    padding-right: 15px;
    padding-left: 15px;
  }

  .has-3-columns .wc-block-grid__products .wc-block-grid__product {
    padding-right: 15px;
    padding-left: 15px;
  }

  .has-2-columns .wc-block-grid__products .wc-block-grid__product {
    padding-right: 15px;
    padding-left: 15px;
  }

  .flex-xl-row-reverse {
    flex-direction: row-reverse !important;
  }

  .justify-content-xl-center {
    justify-content: center !important;
  }

  .align-items-xl-start {
    align-items: flex-start !important;
  }

  .align-items-xl-end {
    align-items: flex-end !important;
  }

  .align-items-xl-center {
    align-items: center !important;
  }

  .text-xl-left {
    text-align: left !important;
  }

  .text-xl-right {
    text-align: right !important;
  }

  .text-xl-center {
    text-align: center !important;
  }

  .m-xl-auto {
    margin: auto !important;
  }

  .mt-xl-auto,
  .my-xl-auto {
    margin-top: auto !important;
  }

  .mr-xl-auto,
  .mx-xl-auto {
    margin-right: auto !important;
  }

  .mb-xl-auto,
  .my-xl-auto {
    margin-bottom: auto !important;
  }

  .ml-xl-auto,
  .mx-xl-auto {
    margin-left: auto !important;
  }

  .hidden-xl-up {
    display: none !important;
  }
}

@media (max-width: 1349px) {
  .page-hero {
    height: 250px;
  }

  .entry-content blockquote {
    font-size: 22px;
  }

  .item-media .item-thumb {
    width: 220px;
  }

  .item-media-sm .item-thumb {
    width: 70px;
  }

  .hidden-lg-down {
    display: none !important;
  }
}
/* ... */

